bin/tests/errors/parser/parser_err_expected_token.swg
#global fileprivate

#assert A // swc-expected-error {{parser_err_expected_token}}
